[gd_scene load_steps=3 format=3 uid="uid://cy6dt6orry2ge"]

[ext_resource type="Script" uid="uid://bumtqp1u8bxnk" path="res://ui/SettingsMenu.gd" id="1"]
[ext_resource type="Script" uid="uid://cfq8hybc1dav3" path="res://ui/KeybindsTab.gd" id="2_7nnky"]

[node name="SettingsMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 48.0
text = "Close"

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 56.0
offset_right = -16.0
offset_bottom = -16.0
current_tab = 0

[node name="GeneralTab" type="VBoxContainer" parent="Panel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VideoTab" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="AudioTab" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="KeybindsTab" type="VBoxContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_7nnky")
metadata/_tab_index = 3
